Dark mode: fix legend colors to original

--- a/stylesheets/_shared.scss
+++ b/stylesheets/_shared.scss
@@ -541,8 +541,7 @@ footer {
         border: none;
     }
     .select2-container--default .select2-selection--multiple .select2-selection__choice {
-        background: #55b !important;
-        color: #fff !important;
+        color: #000;
         border: none;
     }
 
